--- a/templates/list.html
+++ b/templates/list.html
@@ -1,1 +1,3 @@
-<div onclick="loadHome()">List teste</div>
+<div onclick="displayHome()">List teste</div>
+<div class="list-header"></div>
+<div class="list-footer"></div>
