--- a/templates/home.html
+++ b/templates/home.html
@@ -1,5 +1,5 @@
 <div id="main-logo">
   <img src="../assets/icons/alarm.svg" alt="Alarm" />
-  <button onclick="loadList()" class="default-btn">Enter</button>
+  <button onclick="displayList()" class="default-btn">Enter</button>
 </div>
 <div onclick="appHelp()" class="footer">Help me</div>
