--- a/templates/list.html
+++ b/templates/list.html
@@ -1,3 +1,7 @@
-<div onclick="displayHome()">List teste</div>
-<div class="list-header"></div>
-<div class="list-footer"></div>
+<div onclick="displayHome()" class="list-header">
+  <img src="../assets/icons/previous.svg" alt="Backward" />
+</div>
+<div class="list-main"></div>
+<div class="list-footer">
+  <button class="default-btn add-btn">+</button>
+</div>
