--- a/styles/style.css
+++ b/styles/style.css
@@ -28,3 +28,23 @@ main {
   box-shadow: 0 0 15px var(--charleston-green);
   position: relative;
 }
+
+.default-btn {
+  width: 50%;
+  height: 50px;
+  border-radius: 10px;
+  margin-top: 50px;
+  cursor: pointer;
+
+  font-size: 20px;
+  font-weight: 700;
+  color: var(--charleston-green);
+
+  box-shadow: 0px 2px 1px 1px var(--antique-ruby);
+  transition-property: filter;
+  transition-duration: 0.4s;
+}
+.default-btn:hover,
+.default-btn:active {
+  filter: brightness(0.8);
+}
