--- a/templates/home.html
+++ b/templates/home.html
@@ -1,5 +1,5 @@
 <div id="main-logo">
-  <img src="../assets/icons/alarm.svg" alt="Alarm" />
+  <img src="../assets/icons/clock.svg" alt="Clock" />
   <button onclick="displayList()" class="default-btn">Enter</button>
 </div>
 <div onclick="appHelp()" class="footer">Help me</div>
