--- a/templates/list.html
+++ b/templates/list.html
@@ -1,7 +1,37 @@
 <div onclick="displayHome()" class="list-header">
   <img src="../assets/icons/previous.svg" alt="Backward" />
 </div>
-<div class="list-main"></div>
+<div class="list-main">
+  <div id="252580" class="reminder-row">
+    <div class="reminder-wrapper">
+      <h1 class="reminder-title">Entregar essa bosta</h1>
+      <div class="reminder-date">
+        <div class="day">
+          <div class="reminder-value">002</div>
+          <div class="reminder-label">days</div>
+        </div>
+        <div class="separator">:</div>
+        <div class="hour">
+          <div class="reminder-value">09</div>
+          <div class="reminder-label">hours</div>
+        </div>
+        <div class="separator">:</div>
+        <div class="minute">
+          <div class="reminder-value">45</div>
+          <div class="reminder-label">minutes</div>
+        </div>
+        <div class="separator">:</div>
+        <div class="second">
+          <div class="reminder-value">45</div>
+          <div class="reminder-label">seconds</div>
+        </div>
+      </div>
+    </div>
+    <div class="reminder-destroy">
+      <img src="../assets/icons/trash.svg" alt="Delete" />
+    </div>
+  </div>
+</div>
 <div class="list-footer">
   <button class="default-btn add-btn">+</button>
 </div>
