--- a/styles/list.css
+++ b/styles/list.css
@@ -1,10 +1,10 @@
 .list-header {
-  padding: 40px 20px;
+  padding: 25px 15px;
   text-align: left;
 }
 .list-header img {
   cursor: pointer;
-  width: 50px;
+  width: 30px;
 }
 .list-footer {
   position: absolute;
@@ -16,4 +16,53 @@
   line-height: 1;
   font-size: 40px;
   width: 100px;
+}
+
+.reminder-row {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+
+  padding: 20px;
+  border-radius: 25px;
+  background-color: rgb(255, 255, 255, 0.3);
+  margin: 20px 30px;
+
+  text-align: left;
+  box-shadow: 0 3px 3px var(--antique-ruby);
+  cursor: pointer;
+}
+.reminder-title {
+  font-size: 20px;
+  cursor: pointer;
+}
+.reminder-date {
+  margin: 10px 0 0;
+  display: flex;
+  justify-content: left;
+  cursor: pointer;
+}
+.reminder-value {
+  margin-bottom: 3px;
+  line-height: 1;
+  font-size: 30px;
+  font-weight: 700;
+  color: var(--antique-ruby);
+  cursor: pointer;
+}
+.reminder-label {
+  text-align: right;
+  line-height: 1;
+  font-size: 10px;
+}
+.separator {
+  margin: 0 5px;
+  font-size: 22px;
+}
+.reminder-destroy {
+  padding-left: 15px;
+}
+.reminder-destroy img {
+  cursor: pointer;
+  width: 25px;
 }
