--- a/templates/edit.html
+++ b/templates/edit.html
@@ -1,1 +1,22 @@
-<div>TESTE edit html</div>
+<div class="edit-header">
+  <img
+    onclick="displayList()"
+    src="../assets/icons/previous.svg"
+    alt="Backward"
+  />
+</div>
+<div class="edit-main custom-scrollbar">
+  <input
+    id="input-reminder-title"
+    class="edit-input"
+    name="title"
+    type="text"
+    placeholder="Reminder title"
+    maxlength=""
+  />
+  <input id="input-reminder-date" class="edit-input" type="date" name="date" />
+  <input id="input-reminder-time" class="edit-input" type="time" name="time" />
+</div>
+<div class="edit-footer">
+  <button onclick="getData()" class="default-btn save-btn">Save</button>
+</div>
