--- a/templates/list.html
+++ b/templates/list.html
@@ -1,7 +1,11 @@
-<div onclick="displayHome()" class="list-header">
-  <img src="../assets/icons/previous.svg" alt="Backward" />
+<div class="list-header">
+  <img
+    onclick="displayHome()"
+    src="../assets/icons/previous.svg"
+    alt="Backward"
+  />
 </div>
 <div class="list-main custom-scrollbar"></div>
 <div class="list-footer">
-  <button onclick="displayEdit()" class="default-btn add-btn">+</button>
+  <button onclick="displayEdit()" class="default-btn add-new-btn">+</button>
 </div>
