--- a/styles/list.css
+++ b/styles/list.css
@@ -76,3 +76,13 @@
   cursor: pointer;
   width: 25px;
 }
+
+.reminder-ends {
+  text-align: left;
+  margin-bottom: 3px;
+  line-height: 1;
+  font-size: 20px;
+  font-weight: 700;
+  color: var(--antique-ruby);
+  cursor: pointer;
+}
