--- a/styles/edit.css
+++ b/styles/edit.css
@@ -13,13 +13,35 @@
   transform: translate(-50%, -50%);
 }
 
+.input-container {
+  display: flex;
+  flex-direction: column;
+
+  margin-bottom: 20px;
+}
+
+.input-container label {
+  margin: auto;
+  width: 80%;
+  text-align: left;
+
+  line-height: 1;
+  font-size: 20px;
+  font-weight: 700;
+  color: var(--alabaster);
+  text-shadow: 1px 1px 1px var(--antique-ruby);
+}
+
 .edit-input {
+  margin: auto;
   width: 80%;
   height: 40px;
   padding: 0 10px;
 
   background-color: var(--charleston-green);
-  border: 1px solid var(--alabaster);
+  border-bottom: 3px solid var(--antique-ruby);
+
+  font-size: 15px;
 
   cursor: text;
 }
