--- a/templates/edit.html
+++ b/templates/edit.html
@@ -1,7 +1,7 @@
 <div class="edit-header">
   <img
     onclick="displayList()"
-    src="../assets/icons/previous.svg"
+    src="../assets/images/previous.svg"
     alt="Backward"
   />
 </div>
