--- a/templates/list.html
+++ b/templates/list.html
@@ -1,7 +1,7 @@
 <div class="list-header">
   <img
     onclick="displayHome()"
-    src="../assets/icons/previous.svg"
+    src="../assets/images/previous.svg"
     alt="Backward"
   />
 </div>
